added templating for degree

--- a/js/src/template/project.handlebars
+++ b/js/src/template/project.handlebars
@@ -2,13 +2,13 @@
     <div>Location: {{location.city}}, {{location.region}}</div>
     <div>Date: {{currentDate}}</div>
     <div>Conditions: {{item.condition.text}}</div>
-    <div>Current Temp: {{item.condition.temp}} &#176 C</div>
+    <div>Current Temp: {{item.condition.temp}} {{temperature}}</div>
     <div>Sunrise: {{astronomy.sunrise}}</div>
     <div>Sunset: {{astronomy.sunset}}</div>
     <div>
       <ul>
         {{#each item.forecast}}
-        <li>{{day}} {{date}} : hi | {{high}} &#176 C, low | {{low}} &#176 C</li>
+        <li>{{day}} {{date}} : hi | {{high}} {{temperature}}, low | {{low}} {{temperature}}</li>
         {{/each}}
       </ul>
     </div>  
